fix(social): resolve controller mapping issue and finalize friend list logic
- [Fix] 将 FriendController 的 @Controller 修改为 @RestController，修复接口返回 404 问题
- [Config] 添加 spring-cloud-starter-loadbalancer 依赖，解决 OpenFeign 无法找到负载均衡器的报错
- [Logic] 完成 getFriendList 核心业务，实现基于内存的分组聚合 (Bucket Sort) 与 RPC 数据组装
- [API] 暴露好友搜索、申请、审核及列表查询的全套 RESTful 接口